[package]
name = "quine-mc_cluskey"
version = "0.2.2"
authors = ["Oliver Schneider <git-spam-no-reply9815368754983@oli-obk.de>"]
description = "Rust implementation of the Quine-McCluskey algorithm and Petrick's method"
license = "MIT"
repository = "https://github.com/oli-obk/quine-mc_cluskey"
build = "build.rs"

[dependencies]
quickcheck = { version = "0.3.1", optional = true }

[build-dependencies]
skeptic = "0.4"

[dev-dependencies]
skeptic = "0.4"
