[workspace]
members = ["testing"]

[package]
name = "quine-mc_cluskey"
version = "0.2.4"
description = "Rust implementation of the Quine-McCluskey algorithm and Petrick's method"
license = "MIT"
repository = "https://github.com/oli-obk/quine-mc_cluskey"
documentation = "https://docs.rs/quine-mc_cluskey"
edition = "2021"

[dependencies]
quickcheck = { version = "0.3.1", optional = true }
